--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: solar_monitor
       POSTGRES_USER: solar
-      POSTGRES_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-solarmonitor2024}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db:/docker-entrypoint-initdb.d
@@ -40,7 +40,7 @@ services:
     container_name: solar_pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@solar.local
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:?PGADMIN_PASSWORD is required}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin123}
     ports:
       - "5050:80"
     depends_on:
@@ -57,9 +57,9 @@ services:
     container_name: solar_backend
     environment:
       NODE_ENV: production
-      DATABASE_URL: postgresql://solar:${DB_PASSWORD:?DB_PASSWORD is required}@postgres:5432/solar_monitor
+      DATABASE_URL: postgresql://solar:${DB_PASSWORD:-solarmonitor2024}@postgres:5432/solar_monitor
       MQTT_BROKER_URL: mqtt://mosquitto:1883
-      JWT_SECRET: ${JWT_SECRET:?JWT_SECRET is required}
+      JWT_SECRET: ${JWT_SECRET:-solar-jwt-secret-key-2024-change-in-production}
       PORT: 3000
     ports:
       - "3000:3000"
