--- a/solar-backend/Dockerfile
+++ b/solar-backend/Dockerfile
@@ -24,6 +24,9 @@ FROM node:20-alpine AS production
 
 WORKDIR /app
 
+# Install netcat for health checks
+RUN apk add --no-cache netcat-openbsd
+
 # Copy package files
 COPY package*.json ./
 COPY prisma ./prisma/
@@ -37,12 +40,16 @@ COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 # Copy built files
 COPY --from=builder /app/dist ./dist
 
+# Copy entrypoint script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 # Expose port
 EXPOSE 3000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
 
-# Start server
-CMD ["node", "dist/index.js"]
+# Start with entrypoint (auto-init DB)
+ENTRYPOINT ["/docker-entrypoint.sh"]
