--- a/solar-backend/package.json
+++ b/solar-backend/package.json
@@ -11,7 +11,8 @@
         "db:push": "prisma db push",
         "db:migrate": "prisma migrate dev",
         "db:studio": "prisma studio",
-        "db:seed": "tsx prisma/seed.ts"
+        "db:seed": "tsx prisma/seed.ts",
+        "seed": "node dist/seed.js || tsx prisma/seed.ts"
     },
     "dependencies": {
         "@prisma/client": "^6.19.1",
